<resources>
    <string name="app_name">Movie Catalogue App</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_activity_details">ScrollingActivity</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="tagline">Tagline</string>
    <string name="year_genre_duration">%s • %sm</string>
    <string name="genres">Genres</string>
    <string name="rating">0</string>
    <string name="overview">Overview</string>
    <string name="overview_val">overview</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>